# vqgan-clip

./: .bandit.yml  .bumpversion.cfg  .pre-commit-config.yaml  LICENSE  Makefile  pyproject.toml
.github/: labels.yml  pull_request_template.md  stale.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
vqgan_clip/: __version__.py
